# intel-optimization-for-horovod

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.py
.github/: CODEOWNERS
.github/workflows/: ci-results.yaml  ci.yaml  upload-pypi.yml
benchmark/: hvd_bench.py  tensorflow2_synthetic_benchmark.py
cmake/Modules/: FindPytorch.cmake
docs/: Makefile  install.rst  intel_gpus.rst  keras.rst  requirements.txt  tensorflow.rst
examples/pytorch/: pytorch_imagenet_resnet50.py  pytorch_synthetic_benchmark.py
horovod/: __init__.py
horovod/common/: bf16.cc  bf16.h  common.h  controller.cc  global_state.h  group_table.h  message.cc  message.h  operations.cc  operations.h
horovod/common/ops/sycl/: CMakeLists.txt  sycl_kernels.cc  sycl_kernels.h
horovod/keras/: __init__.py
horovod/mxnet/: CMakeLists.txt
horovod/tensorflow/: CMakeLists.txt  __init__.py  compression.py  inplace_bcast_sycl_helper.h  mpi_ops.cc  mpi_ops.py  tensorflow_sycl_helper.h  xla_mpi_ops.cc
horovod/torch/: CMakeLists.txt  __init__.py  adapter_v2.cc  adapter_v2.h  device_util.cc  device_util.h  handle_manager.cc  mpi_ops.py  mpi_ops_v2.cc  optimizer.py  ready_event.cc  ready_event.h  sync_batch_norm.py
test/parallel/: base_test_tensorflow.py  test_compute_worker.py  test_tensorflow.py  test_tensorflow2_keras.py  test_tensorflow2_keras_process_sets.py  test_tensorflow_process_sets.py  test_torch.py  test_xla.py  test_xla_process_sets.py
test_intel/: run_ut.sh
third-party-programs/: THIRD-PARTY-PROGRAMS
xpu_docs/: how_to_build.md  tensorflow_example.md
(+31 files in other folders)
